# qlued

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  README.md  code_of_conduct.md  db_old.sqlite3  index.html  mkdocs.yml  mypy.ini  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  test_mongodb.ipynb  versions.json
.github/workflows/: codeql.yml  django.yml  documentation.yml  prettier.yml
backends/: admin.py  api_v1.py  api_v2.py  apps.py  models.py  schemas.py  storage_providers.py  tests.py  tests_api_v1.py  tests_api_v2.py  tests_local_provider.py  tests_models.py  tests_mongodb_provider.py  tests_storage_provider.py  urls.py  views.py
backends/migrations/: 0001_initial.py  0002_backend.py  0003_auto_20220110_1031.py  0004_alter_backend_description.py  0005_token.py  0006_storageproviderdb.py  0007_storageproviderdb_is_active_and_more.py  0008_alter_storageproviderdb_is_active.py
backends/tests/: tests_api_v1.py  tests_api_v2.py  tests_dropbox_provider.py  tests_local_provider.py  tests_models.py  tests_mongodb_provider.py
contributing/: index.html
docs/: contributing.md  index.md
docs/guides/: dev_guide.md  gen_guide.md  heroku.md  local_installation.md  local_testing.md  oauth.md  storage_providers.md  user_guide.md
docs/notebooks/: API_Showcase.ipynb  Django_shot_requests_external_user.ipynb  Fermion_API_Showcase.ipynb  Fermion_API_Showcase_v1.ipynb  Multi_Qudit_Showcase.ipynb  Untitled.ipynb  fermions_api_showcase.ipynb  fermions_api_showcase_v2.ipynb  mot_showcase.ipynb  rydberg_api_showcase.ipynb  rydberg_api_showcase_v1.ipynb  rydberg_api_showcase_v2.ipynb  rydberg_qiskit_dynamics.ipynb  yaml_test.ipynb
docs/overrides/partials/: comments.html
frontend/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
frontend/migrations/: 0001_initial.py
frontend/templates/: base.html
frontend/templates/frontend/: index.html  signup.html  user.html
guides/dev_guide/: index.html
guides/gen_guide/: index.html
guides/local_installation/: index.html
guides/oauth/: index.html
guides/user_guide/: index.html
main/: local_settings.py  settings.py  test_file.ipynb  urls.py
notebooks/API_Showcase/: index.html
notebooks/Django_shot_requests_external_user/: index.html
notebooks/Fermion_API_Showcase/: index.html
notebooks/Multi_Qudit_Showcase/: index.html
notebooks/Untitled/: index.html
notebooks/fermions_api_showcase/: index.html
notebooks/fermions_api_showcase_v2/: index.html
notebooks/rydberg_api_showcase/: index.html
notebooks/rydberg_api_showcase_v1/: index.html
notebooks/rydberg_api_showcase_v2/: index.html
notebooks/rydberg_qiskit_dynamics/: index.html
notebooks/yaml_test/: index.html
templates/: base.html
templates/account/: login.html  signup.html
templates/frontend/: about.html  add_storage_provider.html  backends.html  delete_storage_provider.html  edit_storage_provider.html  index.html  user.html
templates/ninja/: swagger.html
templates/socialaccount/: login.html  signup.html
v0.1/: 404.html  index.html
v0.1/contributing/: index.html
v0.2/: 404.html  index.html
v0.2/contributing/: index.html
v0.3/: 404.html  index.html
v0.3/contributing/: index.html
v0.4/: 404.html  index.html
v0.4/contributing/: index.html
(+74 files in other folders)
