[tool.poetry]
name = "qlued"
version = "0.4.0"
description = "An API to make quantum circuits accessible for cold atom backends"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-allauth = "^0.60.0"
dj-database-url = "^1.3.0"
python-decouple = "^3.8"
django-csp = "^3.7"
django-qlued = {git = "https://github.com/fretchen/django-qlued.git"}
sqooler = "^0.3.0"


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocs-jupyter = "^0.24.1"
mike = "^1.1.2"


[tool.poetry.group.dev.dependencies]
django-stubs = {version = "^4.2.3", extras = ["compatible-mypy"]}
pylint = "^3.0.3"
pylint-django = "^2.5.5"
black = "^23.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
