[tool.poetry]
name = "qlued"
version = "0.4.0a0"
description = "An API to make quantum circuits accessible for cold atom backends"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
django-allauth = "^0.61.1"
dj-database-url = "^2.1.0"
python-decouple = "^3.8"
django-csp = "^3.7"
django-qlued = {git = "https://github.com/Alqor-UG/django-qlued.git"}


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocs-jupyter = "^0.24.1"
mike = "^2.0.0"


[tool.poetry.group.dev.dependencies]
django-stubs = {version = "^4.2.3", extras = ["compatible-mypy"]}
pylint = "^3.0.3"
pylint-django = "^2.5.5"
black = "^23.7.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
