[tool.poetry]
name = "qlued"
version = "0.4.0a0"
description = "An API to make quantum circuits accessible for cold atom backends"
authors = ["fretchen <fred.jendrzejewski@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
dj-database-url = "^2.1.0"
python-decouple = "^3.8"
django-csp = "^3.7"
django-qlued = {git = "https://github.com/Alqor-UG/django-qlued.git"}
django-allauth = {extras = ["socialaccount"], version = "^0.63.3"}


[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^22.0.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.31"
mkdocs-jupyter = "^0.24.1"
mike = "^2.0.0"


[tool.poetry.group.dev.dependencies]
django-stubs = {version = "^5.0.2", extras = ["compatible-mypy"]}
pylint = "^3.0.3"
pylint-django = "^2.5.5"
black = "^24.1.0"
pre-commit = "^3.6.0"
djhtml = "^3.0.6"
ipykernel = "^6.29.4"
isort = "^5.13.2"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
